Update to Font Awesome 5 and use its free CDN

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Libre+Franklin" />
     <link rel="stylesheet" href="style.css">
     <title>Tomáš Livora</title>
@@ -12,37 +12,37 @@
     <ul>
       <li>
         <a href="https://mail.google.com/" title="E-mail" class="email" id="email">
-          <i class="fa fa-envelope fa-fw" aria-hidden="true"></i>
+          <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
           <span>E-mail</span>
         </a>
       </li>
       <li>
         <a href="https://www.facebook.com/tomas.livora" title="Facebook" class="facebook">
-          <i class="fa fa-facebook-official fa-fw" aria-hidden="true"></i>
+          <i class="fab fa-facebook fa-fw" aria-hidden="true"></i>
           <span>Facebook</span>
         </a>
       </li>
       <li>
         <a href="https://twitter.com/tlivora" title="Twitter" class="twitter">
-          <i class="fa fa-twitter fa-fw" aria-hidden="true"></i>
+          <i class="fab fa-twitter fa-fw" aria-hidden="true"></i>
           <span>Twitter</span>
         </a>
       </li>
       <li>
         <a href="https://www.linkedin.com/in/livora" title="LinkedIn" class="linkedin">
-          <i class="fa fa-linkedin fa-fw" aria-hidden="true"></i>
+          <i class="fab fa-linkedin fa-fw" aria-hidden="true"></i>
           <span>LinkedIn</span>
         </a>
       </li>
       <li>
         <a href="https://github.com/livthomas" title="GitHub" class="github">
-          <i class="fa fa-github fa-fw" aria-hidden="true"></i>
+          <i class="fab fa-github fa-fw" aria-hidden="true"></i>
           <span>GitHub</span>
         </a>
       </li>
       <li>
         <a href="http://blog.livthomas.net/" title="Blog" class="blog">
-          <i class="fa fa-wordpress fa-fw" aria-hidden="true"></i>
+          <i class="fab fa-wordpress fa-fw" aria-hidden="true"></i>
           <span>Blog</span>
         </a>
       </li>
