Load Google font using HTTPS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Libre+Franklin" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Libre+Franklin" />
     <link rel="stylesheet" href="style.css">
     <title>Tomáš Livora</title>
   </head>
