Add links and optimize SEO

--- a/index.html
+++ b/index.html
@@ -2,51 +2,75 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Libre+Franklin" />
+    <meta name="description" content="Tomáš is a freelance software developer who specializes in building modern single-page applications with a strong emphasis on a great UX and a beautiful UI.">
+    <meta name="theme-color" content="#f5f5f5">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://kit-free.fontawesome.com">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Libre+Franklin"/>
     <link rel="stylesheet" href="style.css">
-    <title>Tomáš Livora</title>
+    <script src="https://kit.fontawesome.com/29c4a4fdc1.js" crossorigin="anonymous"></script>
+    <title>Tomáš Livora - Freelance Software Developer</title>
   </head>
   <body>
-    <h1>Tomáš Livora</h1>
-    <ul>
-      <li>
-        <a href="https://mail.google.com/" title="E-mail" class="email" id="email">
-          <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
-          <span>E-mail</span>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.facebook.com/tomas.livora" title="Facebook" class="facebook">
-          <i class="fab fa-facebook fa-fw" aria-hidden="true"></i>
-          <span>Facebook</span>
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/tlivora" title="Twitter" class="twitter">
-          <i class="fab fa-twitter fa-fw" aria-hidden="true"></i>
-          <span>Twitter</span>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/livora" title="LinkedIn" class="linkedin">
-          <i class="fab fa-linkedin fa-fw" aria-hidden="true"></i>
-          <span>LinkedIn</span>
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/livthomas" title="GitHub" class="github">
-          <i class="fab fa-github fa-fw" aria-hidden="true"></i>
-          <span>GitHub</span>
-        </a>
-      </li>
-      <li>
-        <a href="http://blog.livthomas.net/" title="Blog" class="blog">
-          <i class="fab fa-wordpress fa-fw" aria-hidden="true"></i>
-          <span>Blog</span>
-        </a>
-      </li>
-    </ul>
+    <header>
+      <h1>Tomáš Livora</h1>
+      <h2>Freelance Software Developer</h2>
+    </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="https://mail.google.com/" title="E-mail" aria-label="E-mail" class="email" id="email">
+            <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
+            <span>E-mail</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://keybase.io/livthomas" title="Keybase" aria-label="Keybase" class="keybase" id="keybase">
+            <i class="fab fa-keybase fa-fw" aria-hidden="true"></i>
+            <span>Keybase</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/tomas.livora" title="Facebook" aria-label="Facebook" class="facebook">
+            <i class="fab fa-facebook fa-fw" aria-hidden="true"></i>
+            <span>Facebook</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/tlivora" title="Twitter" aria-label="Twitter" class="twitter">
+            <i class="fab fa-twitter fa-fw" aria-hidden="true"></i>
+            <span>Twitter</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/livora" title="LinkedIn" aria-label="LinkedIn" class="linkedin">
+            <i class="fab fa-linkedin fa-fw" aria-hidden="true"></i>
+            <span>LinkedIn</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/livthomas" title="GitHub" aria-label="GitHub" class="github">
+            <i class="fab fa-github fa-fw" aria-hidden="true"></i>
+            <span>GitHub</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://blog.livthomas.net/" title="Blog" aria-label="Blog" class="blog">
+            <i class="fab fa-wordpress fa-fw" aria-hidden="true"></i>
+            <span>Blog</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.toptal.com/resume/tomas-livora" title="Toptal" aria-label="Toptal" class="toptal">
+            <svg width="102px" height="145px" viewBox="0 0 102 145" aria-hidden="true">
+              <path d="M26.825054,85.8955563 L63.8946953,49.6485737 L71.5334773,57.1159467 L34.4544671,93.3568235 L26.825054,85.8955563 Z M101.339093,60.9170303 L39.409124,0.973477259 L26.8849847,13.0965169 L50.1059759,35.5738297 L0,84.0720664 L61.9268293,144.018659 L74.4509685,131.895619 L51.2299773,109.40615 L101.339093,60.9170303 Z"></path>
+            </svg>
+            <span>Toptal</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <script type='text/javascript'>
         document.getElementById('email').setAttribute('href', 'ma' + 'ilto' + ':livora' + 'tom@' + 'gmai' + 'l.com');
     </script>
