--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Tomáš is a freelance software developer who specializes in building modern single-page applications with a strong emphasis on a great UX and a beautiful UI.">
     <meta name="theme-color" content="#f5f5f5">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://kit-free.fontawesome.com">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Libre+Franklin"/>
