--- a/index.html
+++ b/index.html
@@ -1,95 +1,251 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html ⚡ lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <meta name="description" content="Tomáš is a freelance software developer who specializes in building modern single-page applications with a strong emphasis on a great UX and a beautiful UI.">
     <meta name="theme-color" content="#f5f5f5">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
+    <link rel="canonical" href="https://tomas.livora.sk">
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://kit-free.fontawesome.com">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Libre+Franklin"/>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/29c4a4fdc1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
+    <style amp-custom>
+      html {
+        background-color: #f5f5f5;
+        text-align: center;
+      }
+
+      main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        color: #444444;
+        font-family: "Libre Franklin", sans-serif;
+        font-size: 50px;
+        margin: 20px auto;
+      }
+
+      h2 {
+        color: #666666;
+        font-family: "Libre Franklin", sans-serif;
+        font-size: 20px;
+        margin: 0;
+      }
+
+      ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        list-style-type: none;
+        margin: 50px auto;
+        padding: 0;
+      }
+
+      li {
+        font-size: 50px;
+        margin: 12px 10px;
+      }
+
+      a {
+        color: #000000;
+        text-decoration: none;
+      }
+
+      a span {
+        display: none;
+      }
+
+      .toptal > svg {
+        height: 50px;
+        width: 62.5px;
+      }
+
+      .email:hover {
+        color: #e93e30;
+      }
+
+      .keybase:hover {
+        color: #ff6f21;
+      }
+
+      .facebook:hover {
+        color: #3b579d;
+      }
+
+      .twitter:hover {
+        color: #5ea9dd;
+      }
+
+      .linkedin:hover {
+        color: #0077b5;
+      }
+
+      .github:hover {
+        color: #464442;
+      }
+
+      .blog:hover {
+        color: #0085be;
+      }
+
+      .toptal:hover > svg {
+        fill: #204ECF;
+      }
+    </style>
+    <style amp-boilerplate>
+      body {
+        -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        animation: -amp-start 8s steps(1, end) 0s 1 normal both
+      }
+
+      @-webkit-keyframes -amp-start {
+        from {
+          visibility: hidden
+        }
+        to {
+          visibility: visible
+        }
+      }
+
+      @-moz-keyframes -amp-start {
+        from {
+          visibility: hidden
+        }
+        to {
+          visibility: visible
+        }
+      }
+
+      @-ms-keyframes -amp-start {
+        from {
+          visibility: hidden
+        }
+        to {
+          visibility: visible
+        }
+      }
+
+      @-o-keyframes -amp-start {
+        from {
+          visibility: hidden
+        }
+        to {
+          visibility: visible
+        }
+      }
+
+      @keyframes -amp-start {
+        from {
+          visibility: hidden
+        }
+        to {
+          visibility: visible
+        }
+      }
+    </style>
+    <noscript>
+      <style amp-boilerplate>
+        body {
+          -webkit-animation: none;
+          -moz-animation: none;
+          -ms-animation: none;
+          animation: none
+        }
+      </style>
+    </noscript>
     <title>Tomáš Livora - Freelance Software Developer</title>
   </head>
   <body>
-    <header>
-      <h1>Tomáš Livora</h1>
-      <h2>Freelance Software Developer</h2>
-    </header>
-    <nav>
-      <ul>
-        <li>
-          <a href="https://mail.google.com/" title="E-mail" aria-label="E-mail" class="email" id="email">
-            <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
-            <span>E-mail</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://keybase.io/livthomas" title="Keybase" aria-label="Keybase" class="keybase" id="keybase">
-            <i class="fab fa-keybase fa-fw" aria-hidden="true"></i>
-            <span>Keybase</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.facebook.com/tomas.livora" title="Facebook" aria-label="Facebook" class="facebook">
-            <i class="fab fa-facebook fa-fw" aria-hidden="true"></i>
-            <span>Facebook</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/tlivora" title="Twitter" aria-label="Twitter" class="twitter">
-            <i class="fab fa-twitter fa-fw" aria-hidden="true"></i>
-            <span>Twitter</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/livora" title="LinkedIn" aria-label="LinkedIn" class="linkedin">
-            <i class="fab fa-linkedin fa-fw" aria-hidden="true"></i>
-            <span>LinkedIn</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/livthomas" title="GitHub" aria-label="GitHub" class="github">
-            <i class="fab fa-github fa-fw" aria-hidden="true"></i>
-            <span>GitHub</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://blog.livthomas.net/" title="Blog" aria-label="Blog" class="blog">
-            <i class="fab fa-wordpress fa-fw" aria-hidden="true"></i>
-            <span>Blog</span>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.toptal.com/resume/tomas-livora" title="Toptal" aria-label="Toptal" class="toptal">
-            <svg width="102px" height="145px" viewBox="0 0 102 145" aria-hidden="true">
-              <path d="M26.825054,85.8955563 L63.8946953,49.6485737 L71.5334773,57.1159467 L34.4544671,93.3568235 L26.825054,85.8955563 Z M101.339093,60.9170303 L39.409124,0.973477259 L26.8849847,13.0965169 L50.1059759,35.5738297 L0,84.0720664 L61.9268293,144.018659 L74.4509685,131.895619 L51.2299773,109.40615 L101.339093,60.9170303 Z"></path>
-            </svg>
-            <span>Toptal</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <script type='text/javascript'>
-        document.getElementById('email').setAttribute('href', 'ma' + 'ilto' + ':livora' + 'tom@' + 'gmai' + 'l.com');
-    </script>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-72756397-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+    <main>
+      <header>
+        <h1>Tomáš Livora</h1>
+        <h2>Freelance Software Developer</h2>
+      </header>
+      <nav>
+        <ul>
+          <li>
+            <a href="&#x6D;&#x61;&#x69;&#x6C;&#x74;&#x6F;&#x3A;&#x6C;&#x69;&#x76;&#x6F;&#x72;&#x61;&#x74;&#x6F;&#x6D;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;" title="E-mail" aria-label="E-mail" class="email" data-vars-link="email" id="email">
+              <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
+              <span>E-mail</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://keybase.io/livthomas" title="Keybase" aria-label="Keybase" class="keybase" data-vars-link="keybase">
+              <i class="fab fa-keybase fa-fw" aria-hidden="true"></i>
+              <span>Keybase</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/tomas.livora" title="Facebook" aria-label="Facebook" class="facebook" data-vars-link="facebook">
+              <i class="fab fa-facebook fa-fw" aria-hidden="true"></i>
+              <span>Facebook</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/tlivora" title="Twitter" aria-label="Twitter" class="twitter" data-vars-link="twitter">
+              <i class="fab fa-twitter fa-fw" aria-hidden="true"></i>
+              <span>Twitter</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/livora" title="LinkedIn" aria-label="LinkedIn" class="linkedin" data-vars-link="linkedin">
+              <i class="fab fa-linkedin fa-fw" aria-hidden="true"></i>
+              <span>LinkedIn</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/livthomas" title="GitHub" aria-label="GitHub" class="github" data-vars-link="github">
+              <i class="fab fa-github fa-fw" aria-hidden="true"></i>
+              <span>GitHub</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://blog.livthomas.net/" title="Blog" aria-label="Blog" class="blog" data-vars-link="blog">
+              <i class="fab fa-wordpress fa-fw" aria-hidden="true"></i>
+              <span>Blog</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.toptal.com/resume/tomas-livora" title="Toptal" aria-label="Toptal" class="toptal">
+              <svg width="102px" height="145px" viewBox="0 0 102 145" aria-hidden="true">
+                <path d="M26.825054,85.8955563 L63.8946953,49.6485737 L71.5334773,57.1159467 L34.4544671,93.3568235 L26.825054,85.8955563 Z M101.339093,60.9170303 L39.409124,0.973477259 L26.8849847,13.0965169 L50.1059759,35.5738297 L0,84.0720664 L61.9268293,144.018659 L74.4509685,131.895619 L51.2299773,109.40615 L101.339093,60.9170303 Z"></path>
+              </svg>
+              <span>Toptal</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </main>
+    <amp-analytics type="gtag" data-credentials="include">
+      <script type="application/json">
+        {
+          "vars": {
+            "gtag_id": "UA-72756397-1",
+            "config": {
+              "UA-72756397-1": {
+                "groups": "default"
+              }
+            }
+          },
+          "triggers": {
+            "links": {
+              "on": "click",
+              "selector": "a",
+              "request": "event"
+            }
+          }
+        }
+      </script>
+    </amp-analytics>
   </body>
 </html>
