--- a/index.html
+++ b/index.html
@@ -15,16 +15,26 @@
     <style amp-custom>
       html {
         background-color: #f5f5f5;
+        min-height: 100%;
         text-align: center;
       }
 
+      html[⚡] > body {
+        min-height: 100vh;
+      }
+
+      html[⚡] > html > body {
+        min-height: 99%;
+      }
+
       main {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 100vh;
+        left: 50%;
         margin: 0;
         padding: 0;
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
       }
 
       h1 {
