Add Parcel bundler to minify HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <meta name="description" content="Tomáš is a freelance software developer who specializes in building modern single-page applications with a strong emphasis on a great UX and a beautiful UI.">
+    <meta name="keywords" content="Angular, React.js, Java, Node.js">
     <meta name="theme-color" content="#f5f5f5">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
     <link rel="canonical" href="https://tomas.livora.sk">
