Use resource hints for multiple domains

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
     <link rel="canonical" href="https://tomas.livora.sk">
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://cdn.ampproject.org">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+    <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
+    <link rel="preload" as="script" href="https://cdn.ampproject.org/v0/amp-analytics-0.1.js">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Libre+Franklin"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
     <style amp-custom>
