--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <meta name="description" content="Tomáš is a freelance software developer who specializes in building modern single-page applications with a strong emphasis on a great UX and a beautiful UI.">
-    <meta name="keywords" content="Angular, React.js, Java, Node.js">
+    <meta name="keywords" content="Angular, Vue.js, React.js, Node.js">
     <meta name="theme-color" content="#f5f5f5">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
     <link rel="canonical" href="https://tomas.livora.sk">
@@ -40,6 +40,15 @@
         top: 50%;
         transform: translate(-50%, -50%);
         width: 100%;
+      }
+
+      .avatar {
+        border-radius: 50%;
+        filter: grayscale(1);
+      }
+
+      .avatar:hover {
+        filter: grayscale(0);
       }
 
       h1 {
@@ -193,6 +202,7 @@
   <body>
     <main>
       <header>
+        <amp-img alt="Tomáš Livora" src="avatar.jpg" width="256" height="256" class="avatar" alt="Tomáš Livora"></amp-img>
         <h1>Tomáš Livora</h1>
         <h2>Freelance Software Developer</h2>
       </header>
