--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
     <meta name="description" content="Tomáš is a freelance software developer who specializes in building modern single-page applications with a strong emphasis on a great UX and a beautiful UI.">
     <meta name="keywords" content="Angular, Vue.js, React.js, Node.js">
+    <meta property="og:title" content="Tomáš Livora - Freelance Software Developer">
+    <meta property="og:image" content="avatar.jpg">
     <meta name="theme-color" content="#f5f5f5">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
     <link rel="canonical" href="https://tomas.livora.sk">
